Fix bug in querySelectors since digit ids have shifted to span, and fixed decimal point positioning to center

--- a/style.css
+++ b/style.css
@@ -54,16 +54,18 @@ body {
 }
 
 span {
-  text-align: right;
   height: 55px;
 }
 
 .decimal-point {
   width: 2.2rem;
-  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.decimal-point span{
+  text-align: center;
 }
 
 /* Buttons */
